DAM-101: AI based Data masking (#79)